--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -5169,15 +5169,6 @@ Zc
 wchar_t
 -
 "
-LDFLAGS
-=
-"
-LDFLAGS
--
-MANIFESTUAC
-:
-NO
-"
 _USE_DYNAMICBASE
 =
 1
@@ -5212,15 +5203,6 @@ Zc
 :
 wchar_t
 -
-"
-LDFLAGS
-=
-"
-LDFLAGS
--
-MANIFESTUAC
-:
-NO
 "
 _USE_DYNAMICBASE
 =
@@ -6815,12 +6797,6 @@ MOZ_PATH_PROG
 (
 DOXYGEN
 doxygen
-:
-)
-MOZ_PATH_PROG
-(
-WHOAMI
-whoami
 :
 )
 MOZ_PATH_PROG
@@ -8709,9 +8685,6 @@ _PLATFORM_DEFAULT_TOOLKIT
 cairo
 -
 gtk2
-MOZ_ENABLE_POSTSCRIPT
-=
-1
 MOZ_THUMB2
 =
 if
@@ -10729,65 +10702,6 @@ SOLARIS_SUNPRO_CC
 "
 ;
 then
-MKSHLIB
-=
-'
-(
-LD
-)
-(
-DSO_LDOPTS
-)
--
-h
--
-o
-'
-MKCSHLIB
-=
-'
-(
-LD
-)
-(
-DSO_LDOPTS
-)
--
-h
--
-o
-'
-DSO_LDOPTS
-=
-'
--
-shared
-'
-if
-test
-"
-GNU_LD
-"
-;
-then
-#
-Don
-'
-t
-allow
-undefined
-symbols
-in
-libraries
-DSO_LDOPTS
-=
-"
-DSO_LDOPTS
--
-z
-defs
-"
-fi
 DSO_CFLAGS
 =
 '
@@ -13781,8 +13695,6 @@ cairo
 -
 cocoa
 '
-MOZ_ENABLE_POSTSCRIPT
-=
 TARGET_NSPR_MDCPUCFG
 =
 '
@@ -15571,8 +15483,6 @@ BIN_SUFFIX
 .
 exe
 '
-MOZ_ENABLE_POSTSCRIPT
-=
 MOZ_USER_DIR
 =
 "
@@ -16604,8 +16514,6 @@ BIN_SUFFIX
 .
 exe
 '
-MOZ_ENABLE_POSTSCRIPT
-=
 MOZ_USER_DIR
 =
 "
@@ -17864,8 +17772,6 @@ cairo
 -
 os2
 "
-MOZ_ENABLE_POSTSCRIPT
-=
 RC
 =
 rc
@@ -18557,6 +18463,8 @@ s
 fi
 SYSTEM_MAKEDEPEND
 =
+MOZ_FIX_LINK_PATHS
+=
 #
 ORIGIN
 /
@@ -18586,6 +18494,13 @@ libnspr4
 .
 so
 )
+if
+test
+"
+SOLARIS_SUNPRO_CC
+"
+;
+then
 LDFLAGS
 =
 "
@@ -18607,14 +18522,16 @@ ORIGIN
 .
 .
 '
+-
+z
+lazyload
+-
+z
+combreloc
+-
+z
+muldefs
 "
-if
-test
-"
-SOLARIS_SUNPRO_CC
-"
-;
-then
 LIBS
 =
 "
@@ -18622,13 +18539,13 @@ LIBS
 lCrun
 -
 lCstd
+-
+lc
 LIBS
 "
 NS_USE_NATIVE
 =
 1
-MOZ_FIX_LINK_PATHS
-=
 AC_DEFINE
 (
 NSCAP_DISABLE_DEBUG_PTR_TYPES
@@ -18646,6 +18563,10 @@ xbuiltin
 =
 %
 all
+-
+D__FUNCTION__
+=
+__func__
 "
 CXXFLAGS
 =
@@ -18663,8 +18584,13 @@ features
 =
 tmplife
 tmplrefstatic
+extensions
 -
 norunpath
+-
+D__FUNCTION__
+=
+__func__
 "
 _MOZ_EXCEPTIONS_FLAGS_ON
 =
@@ -18689,12 +18615,6 @@ LDFLAGS
 "
 -
 xildoff
--
-z
-lazyload
--
-z
-combreloc
 LDFLAGS
 "
 if
@@ -18815,11 +18735,9 @@ CFLAGS
 (
 DSO_PIC_FLAGS
 )
--
-G
--
-z
-muldefs
+(
+DSO_LDOPTS
+)
 -
 h
 -
@@ -18844,9 +18762,6 @@ DSO_LDOPTS
 '
 -
 G
--
-z
-muldefs
 '
 AR_LIST
 =
@@ -19084,6 +18999,61 @@ _res
 yes
 "
 fi
+AC_TRY_COMPILE
+(
+[
+]
+[
+#
+if
+(
+__SUNPRO_CC
+>
+=
+0x5100
+)
+#
+error
+"
+Sun
+C
++
++
+5
+.
+10
+or
+above
+"
+#
+endif
+]
+_ABOVE_SS12U1
+=
+_ABOVE_SS12U1
+=
+1
+)
+if
+test
+"
+_ABOVE_SS12U1
+"
+;
+then
+#
+disable
+xannotate
+CXXFLAGS
+=
+"
+CXXFLAGS
+-
+xannotate
+=
+no
+"
+fi
 AC_MSG_RESULT
 (
 [
@@ -19092,6 +19062,76 @@ _res
 )
 AC_LANG_RESTORE
 else
+LDFLAGS
+=
+"
+LDFLAGS
+-
+Wl
+-
+z
+ignore
+-
+Wl
+-
+R
+'
+\
+\
+ORIGIN
+:
+\
+\
+ORIGIN
+/
+.
+.
+'
+-
+Wl
+-
+z
+lazyload
+-
+Wl
+-
+z
+combreloc
+-
+Wl
+-
+z
+muldefs
+"
+LIBS
+=
+"
+-
+lc
+LIBS
+"
+MKSHLIB_FORCE_ALL
+=
+'
+-
+Wl
+-
+z
+-
+Wl
+allextract
+'
+MKSHLIB_UNFORCE_ALL
+=
+'
+-
+Wl
+-
+z
+-
+Wl
+defaultextract
+'
 ASFLAGS
 =
 "
@@ -19103,7 +19143,7 @@ DSO_LDOPTS
 =
 '
 -
-G
+shared
 '
 _WARNINGS_CFLAGS
 =
@@ -20056,17 +20096,6 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 i386
-ENABLE_METHODJIT
-=
-1
-AC_DEFINE
-(
-JS_CPU_X86
-)
-AC_DEFINE
-(
-JS_32BIT
-)
 ;
 ;
 x86_64
@@ -20080,10 +20109,6 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 X64
-AC_DEFINE
-(
-JS_CPU_X64
-)
 ;
 ;
 arm
@@ -20097,17 +20122,6 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 ARM
-ENABLE_METHODJIT
-=
-1
-AC_DEFINE
-(
-JS_CPU_ARM
-)
-AC_DEFINE
-(
-JS_32BIT
-)
 ;
 ;
 sparc
@@ -20121,30 +20135,9 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 Sparc
-AC_DEFINE
-(
-JS_CPU_SPARC
-)
 ;
 ;
 esac
-MOZ_ARG_DISABLE_BOOL
-(
-methodjit
-[
--
--
-disable
--
-methodjit
-Disable
-method
-JIT
-support
-]
-ENABLE_METHODJIT
-=
-)
 MOZ_ARG_DISABLE_BOOL
 (
 tracejit
@@ -20162,62 +20155,6 @@ support
 ENABLE_TRACEJIT
 =
 )
-MOZ_ARG_ENABLE_BOOL
-(
-methodjit
--
-spew
-[
--
--
-enable
--
-methodjit
--
-spew
-Enable
-method
-JIT
-spew
-support
-]
-ENABLE_METHODJIT_SPEW
-=
-1
-ENABLE_METHODJIT_SPEW
-=
-)
-AC_SUBST
-(
-ENABLE_METHODJIT
-)
-if
-test
-"
-ENABLE_METHODJIT
-"
-;
-then
-AC_DEFINE
-(
-JS_METHODJIT
-)
-else
-ENABLE_TRACEJIT
-=
-fi
-if
-test
-"
-ENABLE_METHODJIT_SPEW
-"
-;
-then
-AC_DEFINE
-(
-JS_METHODJIT_SPEW
-)
-fi
 if
 test
 "
@@ -32479,95 +32416,65 @@ MOZ_DEBUG_ENABLE_DEFS
 DDEBUG
 -
 D_DEBUG
-"
-case
-"
-{
-target_os
-}
-"
-in
-beos
-*
-)
-MOZ_DEBUG_ENABLE_DEFS
-=
-"
-MOZ_DEBUG_ENABLE_DEFS
--
-DDEBUG_
-{
-USER
-}
-"
-;
-;
-msvc
-*
-|
-mks
-*
-|
-cygwin
-*
-|
-mingw
-*
-|
-os2
-*
-|
-wince
-*
-|
-winmo
-*
-)
-MOZ_DEBUG_ENABLE_DEFS
-=
-"
-MOZ_DEBUG_ENABLE_DEFS
--
-DDEBUG_
-echo
-{
-USERNAME
-}
-|
-sed
--
-e
-'
-s
-|
-|
-_
-|
-g
-'
-"
-;
-;
-*
-)
-MOZ_DEBUG_ENABLE_DEFS
-=
-"
-MOZ_DEBUG_ENABLE_DEFS
--
-DDEBUG_
-WHOAMI
-"
-;
-;
-esac
-MOZ_DEBUG_ENABLE_DEFS
-=
-"
-MOZ_DEBUG_ENABLE_DEFS
 -
 DTRACING
 "
+MOZ_ARG_WITH_STRING
+(
+debug
+-
+label
+[
+-
+-
+with
+-
+debug
+-
+label
+=
+LABELS
+Enabled
+the
+use
+of
+DEBUG_label
+ifdefs
+(
+comma
+separated
+)
+]
+[
+for
+option
+in
+echo
+withval
+|
+sed
+'
+s
+/
+/
+/
+g
+'
+;
+do
+MOZ_DEBUG_ENABLE_DEFS
+=
+"
+MOZ_DEBUG_ENABLE_DEFS
+-
+DDEBUG_
+{
+option
+}
+"
+done
+]
+)
 MOZ_DEBUG_DISABLE_DEFS
 =
 "
@@ -44832,6 +44739,14 @@ for
 libffi
 on
 Solaris
+if
+test
+!
+"
+HAVE_64BIT_OS
+"
+;
+then
 ac_configure_args
 =
 "
@@ -44839,7 +44754,25 @@ ac_configure_args
 CC
 =
 gcc
+CFLAGS
+=
+-
+m32
 "
+else
+ac_configure_args
+=
+"
+ac_configure_args
+CC
+=
+gcc
+CFLAGS
+=
+-
+m64
+"
+fi
 fi
 if
 test
