--- a/js/src/xpconnect/src/Makefile.in
+++ b/js/src/xpconnect/src/Makefile.in
@@ -432,6 +432,9 @@ mk
 MODULE
 =
 xpconnect
+DIRS
+=
+wrappers
 ifeq
 (
 xpconnect
@@ -705,6 +708,14 @@ I
 srcdir
 )
 /
+wrappers
+\
+-
+I
+(
+srcdir
+)
+/
 .
 .
 /
@@ -809,6 +820,18 @@ MOZ_JS_LIBS
 \
 (
 NULL
+)
+LIBS
+=
+wrappers
+/
+(
+LIB_PREFIX
+)
+wrappers
+.
+(
+LIB_SUFFIX
 )
 ifdef
 MOZ_JSLOADER
