Disable quickstub generation in a different way so as to not fail tests horribly
UltraBlame original commit: 61b25b0ef9a4c384bdf0ee887d6e60bc09e29484

--- a/js/src/xpconnect/src/Makefile.in
+++ b/js/src/xpconnect/src/Makefile.in
@@ -996,6 +996,14 @@ CONFIG
 (
 NULL
 )
+#
+TODO
+:
+add
+this
+back
+again
+#
 ENABLE_TRACEABLE_FLAGS
 =
 -
@@ -1003,6 +1011,8 @@ ENABLE_TRACEABLE_FLAGS
 enable
 -
 traceables
+ENABLE_TRACEABLE_FLAGS
+=
 endif
 #
 ENABLE_JIT
