[JAEGER] Merge from fatval & TM.
UltraBlame original commit: db403b4edf3e7a00defa57026e4275be2023c8c2

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -20106,6 +20106,17 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 i386
+ENABLE_METHODJIT
+=
+1
+AC_DEFINE
+(
+JS_CPU_X86
+)
+AC_DEFINE
+(
+JS_32BIT
+)
 ;
 ;
 x86_64
@@ -20119,6 +20130,10 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 X64
+AC_DEFINE
+(
+JS_CPU_X64
+)
 ;
 ;
 arm
@@ -20132,6 +20147,17 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 ARM
+ENABLE_METHODJIT
+=
+1
+AC_DEFINE
+(
+JS_CPU_ARM
+)
+AC_DEFINE
+(
+JS_32BIT
+)
 ;
 ;
 sparc
@@ -20145,9 +20171,30 @@ ENABLE_TRACEJIT
 NANOJIT_ARCH
 =
 Sparc
+AC_DEFINE
+(
+JS_CPU_SPARC
+)
 ;
 ;
 esac
+MOZ_ARG_DISABLE_BOOL
+(
+methodjit
+[
+-
+-
+disable
+-
+methodjit
+Disable
+method
+JIT
+support
+]
+ENABLE_METHODJIT
+=
+)
 MOZ_ARG_DISABLE_BOOL
 (
 tracejit
@@ -20165,6 +20212,62 @@ support
 ENABLE_TRACEJIT
 =
 )
+MOZ_ARG_ENABLE_BOOL
+(
+methodjit
+-
+spew
+[
+-
+-
+enable
+-
+methodjit
+-
+spew
+Enable
+method
+JIT
+spew
+support
+]
+ENABLE_METHODJIT_SPEW
+=
+1
+ENABLE_METHODJIT_SPEW
+=
+)
+AC_SUBST
+(
+ENABLE_METHODJIT
+)
+if
+test
+"
+ENABLE_METHODJIT
+"
+;
+then
+AC_DEFINE
+(
+JS_METHODJIT
+)
+else
+ENABLE_TRACEJIT
+=
+fi
+if
+test
+"
+ENABLE_METHODJIT_SPEW
+"
+;
+then
+AC_DEFINE
+(
+JS_METHODJIT_SPEW
+)
+fi
 if
 test
 "
