[JAEGER] Add configure flags to disable MIC/PIC support; (578896; r=dvander).
Specifically: --disable-monoic, --disable-polyic.

UltraBlame original commit: d83e40b415682d6d233a02be09751b54ef01f6e4

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -20109,6 +20109,12 @@ i386
 ENABLE_METHODJIT
 =
 1
+ENABLE_MONOIC
+=
+1
+ENABLE_POLYIC
+=
+1
 AC_DEFINE
 (
 JS_CPU_X86
@@ -20197,6 +20203,46 @@ ENABLE_METHODJIT
 )
 MOZ_ARG_DISABLE_BOOL
 (
+monoic
+[
+-
+-
+disable
+-
+monoic
+Disable
+use
+of
+MICs
+by
+JIT
+compiler
+]
+ENABLE_MONOIC
+=
+)
+MOZ_ARG_DISABLE_BOOL
+(
+polyic
+[
+-
+-
+disable
+-
+polyic
+Disable
+use
+of
+PICs
+by
+JIT
+compiler
+]
+ENABLE_POLYIC
+=
+)
+MOZ_ARG_DISABLE_BOOL
+(
 tracejit
 [
 -
@@ -20255,6 +20301,30 @@ JS_METHODJIT
 else
 ENABLE_TRACEJIT
 =
+fi
+if
+test
+"
+ENABLE_MONOIC
+"
+;
+then
+AC_DEFINE
+(
+JS_MONOIC
+)
+fi
+if
+test
+"
+ENABLE_POLYIC
+"
+;
+then
+AC_DEFINE
+(
+JS_POLYIC
+)
 fi
 if
 test
