[JAEGER] Merge from tracemonkey.
UltraBlame original commit: 1d68b3042bf58e0b4cd561ba61d2d399a3a269a9

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -10156,6 +10156,7 @@ OS_TEST
 ;
 ;
 arm
+*
 )
 CPU_ARCH
 =
@@ -10455,17 +10456,13 @@ _MOZ_EXCEPTIONS_FLAGS_ON
 =
 '
 -
-fhandle
--
-exceptions
+fexceptions
 '
 _MOZ_EXCEPTIONS_FLAGS_OFF
 =
 '
 -
 fno
--
-handle
 -
 exceptions
 '
@@ -17247,11 +17244,7 @@ _DEFINES_CFLAGS
 =
 '
 -
-Wp
--
 include
--
-Wp
 (
 DEPTH
 )
@@ -17274,11 +17267,7 @@ _DEFINES_CXXFLAGS
 -
 DMOZILLA_CLIENT
 -
-Wp
--
 include
--
-Wp
 (
 DEPTH
 )
@@ -27221,297 +27210,6 @@ dnl
 =
 =
 dnl
-By
-default
-turn
-rtti
-and
-exceptions
-off
-on
-g
-+
-+
-/
-egcs
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-if
-test
-"
-GNU_CXX
-"
-;
-then
-AC_MSG_CHECKING
-(
-for
-C
-+
-+
-exceptions
-flag
-)
-dnl
-They
-changed
--
-f
-[
-no
--
-]
-handle
--
-exceptions
-to
--
-f
-[
-no
--
-]
-exceptions
-in
-g
-+
-+
-2
-.
-8
-AC_CACHE_VAL
-(
-ac_cv_cxx_exceptions_flags
-[
-echo
-"
-int
-main
-(
-)
-{
-return
-0
-;
-}
-"
-|
-cat
->
-conftest
-.
-C
-{
-CXX
--
-g
-+
-+
-}
-{
-CXXFLAGS
-}
--
-c
--
-fno
--
-handle
--
-exceptions
-conftest
-.
-C
->
-conftest
-.
-out
-2
->
-&
-1
-if
-egrep
-"
-warning
-.
-*
-renamed
-"
-conftest
-.
-out
->
-/
-dev
-/
-null
-;
-then
-ac_cv_cxx_exceptions_flags
-=
-{
-_COMPILER_PREFIX
-}
--
-fno
--
-exceptions
-else
-ac_cv_cxx_exceptions_flags
-=
-{
-_COMPILER_PREFIX
-}
--
-fno
--
-handle
--
-exceptions
-fi
-rm
--
-f
-conftest
-*
-]
-)
-AC_MSG_RESULT
-(
-ac_cv_cxx_exceptions_flags
-)
-_MOZ_EXCEPTIONS_FLAGS_OFF
-=
-ac_cv_cxx_exceptions_flags
-_MOZ_EXCEPTIONS_FLAGS_ON
-=
-echo
-ac_cv_cxx_exceptions_flags
-|
-sed
-'
-s
-|
-no
--
-|
-|
-'
-fi
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
 Put
 your
 C
@@ -33572,158 +33270,6 @@ MOZ_DEBUG_SYMBOLS
 )
 export
 MOZ_DEBUG_SYMBOLS
-fi
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-Enable
-Narcissus
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-MOZ_ARG_ENABLE_BOOL
-(
-narcissus
-[
--
--
-enable
--
-narcissus
-Build
-with
-Narcissus
-code
-enabled
-]
-NARCISSUS
-=
-1
-NARCISSUS
-=
-)
-if
-test
--
-n
-"
-NARCISSUS
-"
-;
-then
-AC_DEFINE
-(
-NARCISSUS
-)
 fi
 dnl
 =
@@ -41243,9 +40789,9 @@ out
 .
 pp
 -
-Wp
--
 MD
+-
+MF
 (
 MDDEPDIR
 )
