[JAEGER] Merge from TraceMonkey (which pulled m-c).
UltraBlame original commit: c025b60c574943667459533b117db2808e70754c

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -2777,6 +2777,29 @@ DEFINES
 =
 -
 DJS_HAS_CTYPES
+DEFINES
++
+=
+-
+DDLL_PREFIX
+=
+\
+"
+(
+DLL_PREFIX
+)
+\
+"
+-
+DDLL_SUFFIX
+=
+\
+"
+(
+DLL_SUFFIX
+)
+\
+"
 endif
 ifdef
 JS_NO_THIN_LOCKS
