--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -2307,7 +2307,7 @@ MOZ_ARG_WITH_STRING
 (
 android
 -
-platform
+version
 [
 -
 -
@@ -2315,31 +2315,21 @@ with
 -
 android
 -
-platform
+version
 =
-DIR
-location
-of
-platform
-dir
-default
-NDK
-/
-build
-/
-platforms
-/
+VER
 android
--
+platform
+version
+default
 5
-/
-arch
--
-arm
 ]
-android_platform
+android_version
 =
 withval
+android_version
+=
+5
 )
 if
 test
@@ -2468,11 +2458,15 @@ platforms
 /
 android
 -
-5
+"
+android_version
+"
 /
 arch
 -
-arm
+"
+target_cpu
+"
 fi
 dnl
 set
@@ -2799,6 +2793,11 @@ LDFLAGS
 AC_DEFINE
 (
 ANDROID
+)
+AC_DEFINE_UNQUOTED
+(
+ANDROID_VERSION
+android_version
 )
 AC_DEFINE
 (
@@ -6326,16 +6325,14 @@ _sb_version_major
 -
 eq
 1
-&
-&
-test
+-
+a
 _sb_version_minor
 -
 eq
 0
-&
-&
-test
+-
+a
 _sb_version_point
 -
 le
@@ -6514,9 +6511,8 @@ z
 "
 PERL
 "
-|
-|
-test
+-
+o
 "
 PERL
 "
@@ -6823,9 +6819,8 @@ z
 "
 ZIP
 "
-|
-|
-test
+-
+o
 "
 ZIP
 "
@@ -6864,9 +6859,8 @@ z
 "
 XARGS
 "
-|
-|
-test
+-
+o
 "
 XARGS
 "
@@ -7427,9 +7421,8 @@ n
 "
 XCODEBUILD_VERSION
 "
-&
-&
-test
+-
+a
 "
 XCODEBUILD_VERSION
 "
@@ -14026,52 +14019,6 @@ Bshareable
 DSO_LDOPTS
 "
 fi
-#
-Can
-'
-t
-have
-force
-w
-/
-o
-an
-unforce
-.
-#
-#
-Hack
-for
-FreeBSD
-2
-.
-2
-#
-if
-test
--
-z
-"
-MKSHLIB_FORCE_ALL
-"
-;
-then
-#
-MKSHLIB_FORCE_ALL
-=
-'
--
-Wl
--
-Bforcearchive
-'
-#
-MKSHLIB_UNFORCE_ALL
-=
-'
-'
-#
-fi
 ;
 ;
 ia64
@@ -16716,9 +16663,8 @@ test
 "
 0
 "
-|
-|
-test
+-
+o
 -
 z
 "
@@ -18623,9 +18569,8 @@ z
 "
 CROSS_COMPILE
 "
-&
-&
-test
+-
+a
 -
 f
 /
@@ -19551,9 +19496,8 @@ z
 "
 MKSHLIB_FORCE_ALL
 "
-|
-|
-test
+-
+o
 -
 z
 "
@@ -25331,9 +25275,8 @@ z
 "
 MACOS_DEPLOYMENT_TARGET
 "
-|
-|
-test
+-
+o
 "
 MACOS_DEPLOYMENT_TARGET
 "
@@ -30443,9 +30386,8 @@ test
 "
 NSPR_CFLAGS
 "
-|
-|
-test
+-
+o
 "
 NSPR_LIBS
 "
@@ -32650,9 +32592,8 @@ n
 "
 enableval
 "
-&
-&
-test
+-
+a
 "
 enableval
 "
@@ -34563,9 +34504,8 @@ test
 "
 _MSC_VER
 "
-&
-&
-test
+-
+a
 -
 z
 AS
@@ -35984,6 +35924,168 @@ dnl
 =
 =
 =
+dnl
+=
+Enable
+compiling
+with
+ccache
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_WITH_STRING
+(
+ccache
+[
+-
+-
+with
+-
+ccache
+=
+path
+/
+to
+/
+ccache
+Enable
+compiling
+with
+ccache
+]
+CCACHE_PATH
+=
+withval
+)
+if
+test
+-
+n
+"
+CCACHE_PATH
+"
+;
+then
+CC
+=
+"
+CCACHE_PATH
+CC
+"
+CXX
+=
+"
+CCACHE_PATH
+CXX
+"
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
 =
 =
 dnl
@@ -37198,9 +37300,8 @@ test
 "
 HAVE_GCC3_ABI
 "
-&
-&
-test
+-
+a
 -
 z
 "
@@ -37767,17 +37868,15 @@ n
 "
 GNU_CC
 "
-&
-&
-test
+-
+a
 -
 n
 "
 GNU_CXX
 "
-&
-&
-test
+-
+a
 -
 n
 "
@@ -37972,9 +38071,8 @@ _res_as_stdin
 "
 yes
 "
-&
-&
-test
+-
+a
 "
 _res_gcc_pipe
 "
@@ -38177,22 +38275,6 @@ Under
 gcc
 3
 .
-3
-use
--
-fprofile
--
-arcs
-/
--
-fbranch
--
-probabilities
-dnl
-Under
-gcc
-3
-.
 4
 +
 use
@@ -38374,98 +38456,6 @@ fprofile
 -
 use
 "
-else
-CFLAGS
-=
-"
-_SAVE_CFLAGS
--
-fprofile
--
-arcs
-"
-AC_MSG_CHECKING
-(
-[
-whether
-C
-compiler
-supports
--
-fprofile
--
-arcs
-]
-)
-AC_TRY_COMPILE
-(
-[
-]
-[
-return
-0
-;
-]
-[
-PROFILE_GEN_CFLAGS
-=
-"
--
-fprofile
--
-arcs
-"
-result
-=
-"
-yes
-"
-]
-result
-=
-"
-no
-"
-)
-AC_MSG_RESULT
-(
-[
-result
-]
-)
-if
-test
-result
-=
-"
-yes
-"
-;
-then
-PROFILE_USE_CFLAGS
-=
-"
--
-fbranch
--
-probabilities
-"
-fi
-#
-don
-'
-t
-really
-care
-this
-is
-an
-old
-GCC
-PROFILE_GEN_LDFLAGS
-=
-PROFILE_USE_LDFLAGS
-=
 fi
 CFLAGS
 =
@@ -41564,9 +41554,8 @@ test
 "
 MOZ_DEBUG
 "
-|
-|
-test
+-
+o
 "
 NS_TRACE_MALLOC
 "
