[JAEGER] Bug 580144: put JS_METHODJIT in js-config.h so that everyone sees the same jscntxt.h structs
UltraBlame original commit: 4576e91ac766db0e7b67e8233d6b83850b787bae

--- a/js/src/js-config.h.in
+++ b/js/src/js-config.h.in
@@ -717,6 +717,8 @@ that
 depend
 on
 JS_TRACER
+and
+JS_METHODJIT
 being
 correct
 .
@@ -725,6 +727,9 @@ correct
 #
 undef
 JS_TRACER
+#
+undef
+JS_METHODJIT
 #
 endif
 /
