--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -20063,15 +20063,23 @@ x86_64
 -
 *
 )
+dnl
 ENABLE_TRACEJIT
 =
 1
 NANOJIT_ARCH
 =
 X64
+ENABLE_METHODJIT
+=
+1
 AC_DEFINE
 (
 JS_CPU_X64
+)
+AC_DEFINE
+(
+JS_64BIT
 )
 ;
 ;
