[JAEGER] Introduce JS_NUNBOX32, JS_PUNBOX64 defines. r=dvander.
UltraBlame original commit: 46e7d518dad5403eb622617177f37891a982ee48

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -20054,7 +20054,7 @@ JS_CPU_X86
 )
 AC_DEFINE
 (
-JS_32BIT
+JS_NUNBOX32
 )
 ;
 ;
@@ -20079,7 +20079,7 @@ JS_CPU_X64
 )
 AC_DEFINE
 (
-JS_64BIT
+JS_PUNBOX64
 )
 ;
 ;
@@ -20103,7 +20103,7 @@ JS_CPU_ARM
 )
 AC_DEFINE
 (
-JS_32BIT
+JS_NUNBOX32
 )
 ;
 ;
