[JAEGER] Merge from tracemonkey.
UltraBlame original commit: 7513d466bfee99c796a46b510c985669ef71deab

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -18536,6 +18536,12 @@ norunpath
 D__FUNCTION__
 =
 __func__
+-
+template
+=
+no
+%
+extdef
 "
 _MOZ_EXCEPTIONS_FLAGS_ON
 =
@@ -41009,6 +41015,58 @@ D_JS_CONFDEFS_H_
 -
 DMOZILLA_CLIENT
 '
+else
+_topsrcdirwin
+=
+cd
+\
+dirname
+0
+\
+;
+pwd
+-
+W
+dnl
+cl
+.
+py
+provides
+dependency
+generation
+for
+MSVC
+CC_WRAPPER
+=
+"
+PYTHON
+-
+O
+_topsrcdirwin
+/
+build
+/
+cl
+.
+py
+"
+CXX_WRAPPER
+=
+"
+PYTHON
+-
+O
+_topsrcdirwin
+/
+build
+/
+cl
+.
+py
+"
+COMPILER_DEPEND
+=
+1
 fi
 fi
 fi
@@ -41031,6 +41089,14 @@ COMPILER_DEPEND
 AC_SUBST
 (
 MDDEPDIR
+)
+AC_SUBST
+(
+CC_WRAPPER
+)
+AC_SUBST
+(
+CXX_WRAPPER
 )
 dnl
 =
