--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -1176,6 +1176,12 @@ MDDEPDIR
 :
 =
 MDDEPDIR
+CC_WRAPPER
+=
+CC_WRAPPER
+CXX_WRAPPER
+=
+CXX_WRAPPER
 MOZ_DEMANGLE_SYMBOLS
 =
 MOZ_DEMANGLE_SYMBOLS
