--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1476,8 +1476,8 @@ include
 sources
 for
 the
-Nitro
-assembler
+method
+JIT
 #
 VPATH
 +
@@ -1486,73 +1486,15 @@ VPATH
 srcdir
 )
 /
-assembler
-\
-(
-srcdir
-)
-/
-assembler
-/
-wtf
-\
-(
-srcdir
-)
-/
-assembler
-/
-jit
-\
-(
-srcdir
-)
-/
-assembler
-/
-assembler
-\
-(
-srcdir
-)
-/
 methodjit
 CPPSRCS
 +
 =
-Assertions
-.
-cpp
-\
-ExecutableAllocatorPosix
-.
-cpp
-\
-ExecutableAllocatorWin
-.
-cpp
-\
-ExecutableAllocator
-.
-cpp
-\
-ARMAssembler
-.
-cpp
-\
-MacroAssemblerARM
-.
-cpp
-\
 MethodJIT
 .
 cpp
 \
 BytecodeAnalyzer
-.
-cpp
-\
-Logging
 .
 cpp
 \
@@ -1677,6 +1619,381 @@ TrampolineSUNWX86
 .
 s
 endif
+endif
+endif
+ifeq
+(
+arm
+(
+TARGET_CPU
+)
+)
+#
+CPPSRCS
++
+=
+only_on_arm
+.
+cpp
+endif
+#
+#
+END
+enclude
+sources
+for
+the
+method
+JIT
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+endif
+ifeq
+(
+(
+TARGET_CPU
+)
+powerpc
+)
+VPATH
++
+=
+(
+srcdir
+)
+/
+assembler
+\
+(
+srcdir
+)
+/
+assembler
+/
+wtf
+\
+(
+srcdir
+)
+/
+yarr
+/
+pcre
+\
+(
+NULL
+)
+CPPSRCS
++
+=
+pcre_compile
+.
+cpp
+\
+pcre_exec
+.
+cpp
+\
+pcre_tables
+.
+cpp
+\
+pcre_xclass
+.
+cpp
+\
+pcre_ucp_searchfuncs
+.
+cpp
+\
+(
+NULL
+)
+else
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+#
+BEGIN
+include
+sources
+for
+the
+Nitro
+assembler
+#
+VPATH
++
+=
+(
+srcdir
+)
+/
+assembler
+\
+(
+srcdir
+)
+/
+assembler
+/
+wtf
+\
+(
+srcdir
+)
+/
+assembler
+/
+jit
+\
+(
+srcdir
+)
+/
+assembler
+/
+assembler
+\
+(
+srcdir
+)
+/
+methodjit
+\
+(
+srcdir
+)
+/
+yarr
+\
+(
+srcdir
+)
+/
+yarr
+/
+yarr
+\
+(
+srcdir
+)
+/
+yarr
+/
+pcre
+\
+(
+srcdir
+)
+/
+yarr
+/
+wtf
+\
+(
+NONE
+)
+CPPSRCS
++
+=
+Assertions
+.
+cpp
+\
+ExecutableAllocatorPosix
+.
+cpp
+\
+ExecutableAllocatorWin
+.
+cpp
+\
+ExecutableAllocator
+.
+cpp
+\
+ARMAssembler
+.
+cpp
+\
+Logging
+.
+cpp
+\
+MacroAssemblerARM
+.
+cpp
+\
+MacroAssemblerX86Common
+.
+cpp
+\
+RegexCompiler
+.
+cpp
+\
+RegexJIT
+.
+cpp
+\
+pcre_compile
+.
+cpp
+\
+pcre_exec
+.
+cpp
+\
+pcre_tables
+.
+cpp
+\
+pcre_xclass
+.
+cpp
+\
+pcre_ucp_searchfuncs
+.
+cpp
+\
+(
+NONE
+)
+ifeq
+(
+86
+(
+findstring
+86
+(
+TARGET_CPU
+)
+)
+)
+ifeq
+(
+x86_64
+(
+TARGET_CPU
+)
+)
+ifeq
+(
+(
+OS_ARCH
+)
+WINNT
+)
+ASFILES
++
+=
+TrampolineMasmX64
+.
+asm
+endif
+#
+CPPSRCS
++
+=
+only_on_x86_64
+.
+cpp
+else
+#
+CPPSRCS
++
+=
+only_on_x86
+.
+cpp
 endif
 endif
 ifeq
@@ -5198,6 +5515,13 @@ srcdir
 )
 /
 assembler
+-
+I
+(
+srcdir
+)
+/
+yarr
 #
 #
 Needed
