--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1965,20 +1965,6 @@ x86_64
 TARGET_CPU
 )
 )
-ifeq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-ASFILES
-+
-=
-TrampolineMasmX64
-.
-asm
-endif
 #
 CPPSRCS
 +
@@ -5469,61 +5455,6 @@ Nitro
 assembler
 #
 #
-#
-FIXME
-figure
-out
-where
-INCLUDES
-is
-being
-reset
-and
-move
-this
-#
-#
-backwards
-to
-that
-point
-.
-Ideally
-merge
-with
-the
-rest
-of
-the
-#
-#
-Nitro
-assembler
-stuff
-far
-above
-.
-ifdef
-ENABLE_METHODJIT
-INCLUDES
-+
-=
--
-I
-(
-srcdir
-)
-/
-assembler
--
-I
-(
-srcdir
-)
-/
-yarr
-#
-#
 Needed
 to
 "
@@ -5563,17 +5494,55 @@ CXXFLAGS
 +
 =
 -
-DENABLE_ASSEMBLER
+DUSE_SYSTEM_MALLOC
 =
 1
+ifeq
+(
+android
+(
+TARGET_VENDOR
+)
+)
+CXXFLAGS
++
+=
 -
-DUSE_SYSTEM_MALLOC
+DWTF_PLATFORM_ANDROID
+=
+1
+else
+CXXFLAGS
++
+=
+-
+DENABLE_ASSEMBLER
 =
 1
 -
 DENABLE_JIT
 =
 1
+endif
+INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+assembler
+-
+I
+(
+srcdir
+)
+/
+yarr
+ifdef
+ENABLE_METHODJIT
 #
 Build
 a
