[JAEGER] Bug 588267 - Re-land Win64 port. r=dvander
UltraBlame original commit: 0850c92fccfd7061586bd800f58794ad1524e2fc

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -15950,6 +15950,24 @@ HOST_LD
 LD
 )
 '
+if
+test
+"
+AS_BIN
+"
+;
+then
+AS
+=
+"
+(
+basename
+"
+AS_BIN
+"
+)
+"
+fi
 AR
 =
 '
@@ -16006,6 +16024,9 @@ vc40
 .
 pdb
 '
+ASM_SUFFIX
+=
+asm
 OBJ_SUFFIX
 =
 obj
