[JAEGER] ICs for scripted calls (bug 587698, r=dmandelin).
UltraBlame original commit: 41e3e584023f092b548aea0931b3b4b34c206d00

--- a/content/events/test/Makefile.in
+++ b/content/events/test/Makefile.in
@@ -438,6 +438,22 @@ timeouts
 test_bug563329
 .
 html
+#
+Disabled
+due
+to
+lack
+of
+present
+support
+for
+JSD
+in
+JM
+#
+test_bug448602
+.
+html
 _TEST_FILES
 =
 \
@@ -547,10 +563,6 @@ test_bug447736
 .
 html
 \
-test_bug448602
-.
-html
-\
 test_bug450876
 .
 html
@@ -620,14 +632,6 @@ test_bug547996
 xhtml
 \
 test_bug556493
-.
-html
-\
-test_bug586961
-.
-xul
-\
-test_clickevent_on_input
 .
 html
 \
