--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -13682,6 +13682,12 @@ MOZ_OPTIMIZE_FLAGS
 "
 -
 O3
+-
+fomit
+-
+frame
+-
+pointer
 "
 _PEDANTIC
 =
@@ -42427,7 +42433,19 @@ MOZ_APP_DISPLAYNAME
 )
 AC_SUBST
 (
+MOZ_APP_UA_NAME
+)
+AC_SUBST
+(
 MOZ_APP_VERSION
+)
+AC_SUBST
+(
+MOZ_UA_FIREFOX_VERSION
+)
+AC_SUBST
+(
+FIREFOX_VERSION
 )
 AC_SUBST
 (
