Backed out changeset e2e1ea2a39ce. (Igor Bukanov – bug 588016 - Avoid reporting OOM when background has not finished. r=anygregor)
UltraBlame original commit: afe3db59ae35d04547b3c07fdc46e8e77d8cd9d0

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -925,6 +925,10 @@ jsstr
 .
 cpp
 \
+jstask
+.
+cpp
+\
 jstypedarray
 .
 cpp
@@ -1180,6 +1184,10 @@ jsstdint
 h
 \
 jsstr
+.
+h
+\
+jstask
 .
 h
 \
@@ -1675,15 +1683,9 @@ endif
 ifeq
 (
 (
-filter
--
-out
-powerpc
-sparc
-(
 TARGET_CPU
 )
-)
+powerpc
 )
 VPATH
 +
