Bug 584175 - Unify various JS probes into a single set of static probe points. r=gal
Part 1: Change dtrace-specific names to probes
Part 2: Stop using the frame pointer for probes.
Part 3: Update the set of available probes

r=galuci.edu
a=NPOTB

UltraBlame original commit: bb3730430112d22c71faf56d97d82b1d2bbac928

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -893,6 +893,10 @@ jsprf
 .
 cpp
 \
+jsprobes
+.
+cpp
+\
 jspropertycache
 .
 cpp
@@ -956,16 +960,6 @@ cpp
 (
 NULL
 )
-ifdef
-HAVE_DTRACE
-CPPSRCS
-+
-=
-\
-jsdtracef
-.
-cpp
-endif
 INSTALLED_HEADERS
 =
 \
@@ -1124,6 +1118,10 @@ jsproxy
 h
 \
 jsprf
+.
+h
+\
+jsprobes
 .
 h
 \
@@ -2144,10 +2142,6 @@ HAVE_DTRACE
 INSTALLED_HEADERS
 +
 =
-\
-jsdtracef
-.
-h
 \
 (
 CURDIR
@@ -5028,7 +5022,7 @@ addsuffix
 (
 OBJ_SUFFIX
 )
-jsdtracef
+jsprobes
 jsinterp
 jsobj
 )
