Bug 592641 - Tests.r=Neil,a=tests
UltraBlame original commit: 4252fe859077c6b465cb0c12a8203b1756683602

--- a/content/html/document/test/Makefile.in
+++ b/content/html/document/test/Makefile.in
@@ -737,6 +737,28 @@ html
 (
 NULL
 )
+ifneq
+(
+mobile
+(
+MOZ_BUILD_APP
+)
+)
+_BROWSER_TEST_FILES
+=
+\
+browser_bug592641
+.
+js
+\
+bug592641_img
+.
+jpg
+\
+(
+NULL
+)
+endif
 libs
 :
 :
@@ -769,3 +791,43 @@ tests
 (
 relativesrcdir
 )
+ifneq
+(
+mobile
+(
+MOZ_BUILD_APP
+)
+)
+libs
+:
+:
+(
+_BROWSER_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
+/
+(
+relativesrcdir
+)
+endif
