Bug 592879 - Detect and warn users that the current window.console API is third party r=dietrich a=beta6+
UltraBlame original commit: e931499f28ebe939db16699ee1284ace466f0e7e

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -465,6 +465,10 @@ browser_HUDServiceTestsAll
 .
 js
 \
+browser_warn_user_about_replaced_api
+.
+js
+\
 browser_webconsole_bug_585237_line_limit
 .
 js
@@ -618,6 +622,16 @@ wrong
 hud
 -
 iframe
+.
+html
+\
+test
+-
+console
+-
+replaced
+-
+api
 .
 html
 \
