Bug 583476 - WebConsole fails to activate when window.console is already defined r=sdwilsh a=betaN
UltraBlame original commit: fdc34f208b336f6bef9721c03b3cf12e01e4bd70

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -497,6 +497,10 @@ browser_webconsole_bug_581231_close_button
 .
 js
 \
+browser_webconsole_consoleonpage
+.
+js
+\
 (
 NULL
 )
@@ -632,6 +636,14 @@ console
 replaced
 -
 api
+.
+html
+\
+test
+-
+own
+-
+console
 .
 html
 \
