Bug 589413 - Failure to open libnss3.so when Firefox path contains UTF-8 characters. Part 3: tests. r=bent, a=final+
UltraBlame original commit: 7b0f220344a94efba84f7415cdc3295adcd175e8

--- a/toolkit/components/ctypes/tests/unit/test_jsctypes.js.in
+++ b/toolkit/components/ctypes/tests/unit/test_jsctypes.js.in
@@ -468,6 +468,37 @@ BLOCK
 *
 *
 /
+try
+{
+/
+/
+We
+might
+be
+running
+without
+privileges
+in
+which
+case
+it
+'
+s
+up
+to
+the
+/
+/
+harness
+to
+give
+us
+the
+'
+ctypes
+'
+object
+.
 Components
 .
 utils
@@ -489,20 +520,13 @@ jsm
 "
 )
 ;
-const
-Cc
-=
-Components
-.
-classes
-;
-const
-Ci
-=
-Components
-.
-interfaces
-;
+}
+catch
+(
+e
+)
+{
+}
 CTYPES_TEST_LIB
 =
 ctypes
@@ -513,6 +537,25 @@ libraryName
 jsctypes
 -
 test
+"
+)
+;
+CTYPES_UNICODE_LIB
+=
+ctypes
+.
+libraryName
+(
+"
+jsctyp
+\
+u00E8s
+-
+t
+\
+u00EB
+\
+u00DFt
 "
 )
 ;
@@ -585,6 +628,21 @@ if
 !
 stack
 )
+{
+try
+{
+/
+/
+We
+might
+not
+have
+a
+'
+Components
+'
+object
+.
 stack
 =
 Components
@@ -593,6 +651,14 @@ stack
 .
 caller
 ;
+}
+catch
+(
+e
+)
+{
+}
+}
 try
 {
 f
@@ -742,8 +808,6 @@ do_get_file
 (
 CTYPES_TEST_LIB
 )
-.
-path
 ;
 let
 library
@@ -753,6 +817,8 @@ ctypes
 open
 (
 libfile
+.
+path
 )
 ;
 /
@@ -1853,6 +1919,8 @@ ctypes
 open
 (
 libfile
+.
+path
 )
 ;
 let
@@ -2005,6 +2073,114 @@ run_load_system_library
 (
 )
 true
+)
+;
+/
+/
+Test
+loading
+a
+library
+with
+a
+unicode
+name
+(
+bug
+589413
+)
+.
+Note
+that
+nsIFile
+/
+/
+implementations
+are
+not
+available
+in
+some
+harnesses
+;
+if
+not
+the
+harness
+/
+/
+should
+take
+care
+of
+the
+copy
+for
+us
+.
+let
+unicodefile
+=
+do_get_file
+(
+CTYPES_UNICODE_LIB
+true
+)
+;
+let
+copy
+=
+libfile
+.
+copyTo
+instanceof
+Function
+;
+if
+(
+copy
+)
+libfile
+.
+copyTo
+(
+null
+unicodefile
+.
+leafName
+)
+;
+library
+=
+ctypes
+.
+open
+(
+unicodefile
+.
+path
+)
+;
+run_void_tests
+(
+library
+)
+;
+library
+.
+close
+(
+)
+;
+if
+(
+copy
+)
+unicodefile
+.
+remove
+(
+false
 )
 ;
 }
