Bug 596174 - disabling test browser_bug586574.js due to perma-orange on Mac OS X. a=disable perma-orange on Mac OS X. a=test disable
UltraBlame original commit: 285d9d4efd58a7d03837f4f5283316f217776ae5

--- a/toolkit/mozapps/extensions/test/browser/Makefile.in
+++ b/toolkit/mozapps/extensions/test/browser/Makefile.in
@@ -525,10 +525,6 @@ browser_bug581076
 .
 js
 \
-browser_bug586574
-.
-js
-\
 browser_bug587970
 .
 js
@@ -612,6 +608,15 @@ xhtml
 (
 NULL
 )
+#
+Disabled
+browser_bug586574
+.
+js
+due
+to
+bug
+596174
 include
 (
 topsrcdir
