Bug 595445 - Factor out geolocation prompt into something that can be reused - Part 2 r=olli a=mfinkle
UltraBlame original commit: 1d98cd73f226998f71e65c35dc959e8d159c35a5

--- a/dom/base/Makefile.in
+++ b/dom/base/Makefile.in
@@ -538,6 +538,10 @@ nsWrapperCache
 .
 h
 \
+nsContentPermissionHelper
+.
+h
+\
 (
 NULL
 )
@@ -621,6 +625,10 @@ nsDOMScriptObjectFactory
 cpp
 \
 nsQueryContentEventResult
+.
+cpp
+\
+nsContentPermissionHelper
 .
 cpp
 \
