Bug 595384 - Disable the updater utility for Android [r=rs, a2.0=blassey]
UltraBlame original commit: 6d0e5b481cc7d145def8cab16bf80fb7f120826f

--- a/toolkit/mozapps/update/Makefile.in
+++ b/toolkit/mozapps/update/Makefile.in
@@ -447,6 +447,13 @@ nsUpdateTimerManager
 manifest
 ifdef
 MOZ_UPDATER
+ifneq
+(
+(
+OS_TARGET
+)
+Android
+)
 DIRS
 =
 .
@@ -459,6 +466,7 @@ updater
 (
 NULL
 )
+endif
 XPIDLSRCS
 +
 =
