Bug 595456 - E10: Remote desktop notification prompt. r=cjones a=mfinkle
UltraBlame original commit: df5f653ea4134475168aa452bfe99d4ad070771d

--- a/dom/src/notification/Makefile.in
+++ b/dom/src/notification/Makefile.in
@@ -489,6 +489,28 @@ I
 topsrcdir
 )
 /
+dom
+/
+ipc
+\
+-
+I
+(
+topsrcdir
+)
+/
+content
+/
+base
+/
+src
+\
+-
+I
+(
+topsrcdir
+)
+/
 content
 /
 events
@@ -498,6 +520,30 @@ src
 (
 NULL
 )
+include
+(
+topsrcdir
+)
+/
+config
+/
+config
+.
+mk
+include
+(
+topsrcdir
+)
+/
+ipc
+/
+chromium
+/
+chromium
+-
+config
+.
+mk
 include
 (
 topsrcdir
