Bug 594549 - Provide update locale info in the Android package [r=blassey, a=blocking-fennec]
UltraBlame original commit: be06ea6f6558a47de55fc51e6cb661d8e663ec0c

--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -1464,6 +1464,22 @@ fi
 ;
 done
 )
+ifdef
+MOZ_UPDATER
+(
+NSINSTALL
+)
+(
+DIST
+)
+/
+bin
+/
+update
+.
+locale
+dist
+endif
 gecko
 -
 unsigned
