temporarily disable updater tests on android r=blassey a=bustage-fix
UltraBlame original commit: 11e4faad5545d1d2d96098991015d34f40addeec

--- a/toolkit/mozapps/update/Makefile.in
+++ b/toolkit/mozapps/update/Makefile.in
@@ -447,6 +447,12 @@ nsUpdateTimerManager
 manifest
 ifdef
 MOZ_UPDATER
+DIRS
+=
+.
+.
+/
+readstrings
 ifneq
 (
 (
@@ -455,17 +461,9 @@ OS_TARGET
 Android
 )
 DIRS
++
 =
-.
-.
-/
-readstrings
-\
 updater
-\
-(
-NULL
-)
 endif
 XPIDLSRCS
 +
