Bug 596328 - "non-IPC builds burning with nsContentPermissionHelper" r=benjamin a=benjamin
UltraBlame original commit: 53a5148e8fadfa947106805dafa4b03abad164e4

--- a/dom/base/Makefile.in
+++ b/dom/base/Makefile.in
@@ -538,10 +538,6 @@ nsWrapperCache
 .
 h
 \
-nsContentPermissionHelper
-.
-h
-\
 (
 NULL
 )
@@ -628,6 +624,26 @@ nsQueryContentEventResult
 .
 cpp
 \
+(
+NULL
+)
+ifdef
+MOZ_IPC
+EXPORTS
++
+=
+\
+nsContentPermissionHelper
+.
+h
+\
+(
+NULL
+)
+CPPSRCS
++
+=
+\
 nsContentPermissionHelper
 .
 cpp
@@ -635,6 +651,7 @@ cpp
 (
 NULL
 )
+endif
 include
 (
 topsrcdir
