Bug 595455 - After several background update check failures notify the user that they should check if there is a new version available. r=dtownsend, a=blocking2.0-beta7
UltraBlame original commit: 8f4cd741f348c92858fec532ca3d962a891336e7

--- a/toolkit/mozapps/update/test/chrome/Makefile.in
+++ b/toolkit/mozapps/update/test/chrome/Makefile.in
@@ -671,6 +671,10 @@ test_0142_notify_invalidCertAttrs_hasUpdate
 .
 xul
 \
+test_0151_notify_backgroundCheckError
+.
+xul
+\
 test_9999_cleanup
 .
 xul
