--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -1158,6 +1158,14 @@ file_bug550565_favicon
 .
 ico
 \
+browser_overLinkInLocationBar
+.
+js
+\
+browser_overLinkInLocationBar
+.
+html
+\
 (
 NULL
 )
