Bug 590874 - Disable test_bug534293.html due to frequent orange until bug 590713 is fixed. r=bzbarsky, a=test-only.
UltraBlame original commit: 3bc59ea9b0af8e7ef128bcf332fa8ba3e8047db2

--- a/parser/htmlparser/tests/mochitest/Makefile.in
+++ b/parser/htmlparser/tests/mochitest/Makefile.in
@@ -525,10 +525,6 @@ invalidchar
 .
 xml
 \
-test_bug534293
-.
-html
-\
 file_bug534293
 .
 sjs
@@ -566,6 +562,20 @@ file_bug568470
 script
 .
 sjs
+\
+#
+Disable
+test
+due
+to
+frequent
+orange
+on
+Mac
+#
+test_bug534293
+.
+html
 \
 libs
 :
