--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -473,6 +473,10 @@ browser_webconsole_bug_585237_line_limit
 .
 js
 \
+browser_webconsole_bug_586142_insert_newlines
+.
+js
+\
 browser_webconsole_bug_586388_select_all
 .
 js
