--- a/toolkit/components/alerts/src/Makefile.in
+++ b/toolkit/components/alerts/src/Makefile.in
@@ -461,6 +461,30 @@ topsrcdir
 /
 config
 /
+config
+.
+mk
+include
+(
+topsrcdir
+)
+/
+ipc
+/
+chromium
+/
+chromium
+-
+config
+.
+mk
+include
+(
+topsrcdir
+)
+/
+config
+/
 rules
 .
 mk
