Backout changeset 7eb93fe05d3a. bug 582840 due to oranges
UltraBlame original commit: 77e11b95175faa0b37166d68311b62b8c398e13d

--- a/content/base/test/chrome/Makefile.in
+++ b/content/base/test/chrome/Makefile.in
@@ -441,6 +441,10 @@ referer
 .
 sjs
 \
+bug514705
+.
+html
+\
 (
 NULL
 )
@@ -464,6 +468,14 @@ test_bug430050
 xul
 \
 test_bug467123
+.
+xul
+\
+test_bug514705
+.
+xul
+\
+bug514705_helper
 .
 xul
 \
