Bug 582057, part k: Gut platform widgets from content processes. sr=bsmedberg
UltraBlame original commit: daeab9b5b99bbc50099ae3a66b87bd339db48940

--- a/dom/ipc/Makefile.in
+++ b/dom/ipc/Makefile.in
@@ -437,25 +437,11 @@ EXPORTS
 TabMessageUtils
 .
 h
-PCOMContentPermissionRequestChild
-.
-h
 EXPORTS_NAMESPACES
 =
 mozilla
-mozilla
 /
 dom
-EXPORTS_mozilla
-=
-\
-TabTypes
-.
-h
-\
-(
-NULL
-)
 EXPORTS_mozilla
 /
 dom
@@ -611,6 +597,19 @@ src
 -
 I
 (
+srcdir
+)
+/
+.
+.
+/
+src
+/
+geolocation
+\
+-
+I
+(
 topsrcdir
 )
 /
@@ -646,27 +645,8 @@ base
 /
 src
 \
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-src
-/
-base
-\
 (
 NULL
-)
-CXXFLAGS
-+
-=
-(
-TK_CFLAGS
 )
 DEFINES
 +
