Bug 582057, part j: Implement a "puppet widget" stand-in for platform widgets, for content processes. sr=roc
UltraBlame original commit: 314680412c410a310691a0e5c60a0b0d5aaf7f41

--- a/widget/src/xpwidgets/Makefile.in
+++ b/widget/src/xpwidgets/Makefile.in
@@ -500,6 +500,20 @@ cpp
 (
 NULL
 )
+ifdef
+MOZ_IPC
+CPPSRCS
++
+=
+\
+PuppetWidget
+.
+cpp
+\
+(
+NULL
+)
+endif
 ifneq
 (
 (
@@ -577,27 +591,6 @@ widget_shared
 (
 LIB_SUFFIX
 )
-ifdef
-MOZ_X11
-SHARED_LIBRARY_LIBS
-+
-=
-.
-.
-/
-shared
-/
-x11
-/
-(
-LIB_PREFIX
-)
-widget_shared_x11
-.
-(
-LIB_SUFFIX
-)
-endif
 LOCAL_INCLUDES
 +
 =
@@ -669,6 +662,8 @@ config
 config
 .
 mk
+ifdef
+MOZ_IPC
 include
 (
 topsrcdir
@@ -683,6 +678,7 @@ chromium
 config
 .
 mk
+endif
 include
 (
 topsrcdir
