Bug 570620, part i: Implement ShadowLayer::Disconnect() for common-case shutdown, and ShadowableLayer::Disconnect() for emergency-case shutdown. r=vlad
UltraBlame original commit: dc39260535b2a43b1d47f747dd1277de016f7f09

--- a/gfx/layers/Makefile.in
+++ b/gfx/layers/Makefile.in
@@ -606,10 +606,6 @@ DeviceManagerD3D9
 .
 cpp
 \
-Nv3DVUtils
-.
-cpp
-\
 (
 NULL
 )
@@ -633,6 +629,14 @@ ShadowLayers
 .
 h
 \
+ShadowLayersChild
+.
+h
+\
+ShadowLayersParent
+.
+h
+\
 (
 NULL
 )
@@ -641,6 +645,14 @@ CPPSRCS
 =
 \
 ShadowLayers
+.
+cpp
+\
+ShadowLayerChild
+.
+cpp
+\
+ShadowLayersChild
 .
 cpp
 \
