Bug 570620, part n: Hook layout/ipc into the build system, and integrate PRenderFrame into the PBrowser family. sr=bsmedberg
UltraBlame original commit: e5bb865360bcaa9bf1ce13d0c91decacf537b4c5

--- a/ipc/ipdl/Makefile.in
+++ b/ipc/ipdl/Makefile.in
@@ -577,6 +577,12 @@ exthandler
 \
 dom
 /
+src
+/
+geolocation
+\
+dom
+/
 plugins
 \
 dom
@@ -608,6 +614,10 @@ ipc
 js
 /
 jetpack
+\
+layout
+/
+ipc
 \
 netwerk
 /
