--- a/layout/base/Makefile.in
+++ b/layout/base/Makefile.in
@@ -753,6 +753,23 @@ config
 rules
 .
 mk
+ifdef
+MOZ_IPC
+include
+(
+topsrcdir
+)
+/
+ipc
+/
+chromium
+/
+chromium
+-
+config
+.
+mk
+endif
 LOCAL_INCLUDES
 +
 =
