--- a/layout/ipc/Makefile.in
+++ b/layout/ipc/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -142,10 +141,8 @@ The
 Original
 Code
 is
-mozilla
-.
-org
-code
+Mozilla
+Firefox
 .
 #
 #
@@ -158,9 +155,21 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+The
+Mozilla
+Foundation
+<
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+>
 .
 #
 Portions
@@ -174,7 +183,7 @@ Copyright
 (
 C
 )
-1998
+2010
 #
 the
 Initial
@@ -208,7 +217,6 @@ terms
 of
 #
 either
-of
 the
 GNU
 General
@@ -224,8 +232,8 @@ the
 GPL
 "
 )
-#
 or
+#
 the
 GNU
 Lesser
@@ -387,6 +395,9 @@ DEPTH
 =
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -409,144 +420,77 @@ mk
 MODULE
 =
 layout
-PARALLEL_DIRS
+LIBRARY_NAME
 =
-\
-style
-\
-base
-\
-generic
-\
-forms
-\
-tables
-\
-xul
-/
-base
-/
-public
-\
-xul
-/
-base
-/
-src
-\
-(
-NULL
-)
-ifdef
-NS_PRINTING
-PARALLEL_DIRS
-+
+gkipc_s
+LIBXUL_LIBRARY
 =
-printing
-endif
-ifdef
-MOZ_IPC
-PARALLEL_DIRS
-+
+1
+FORCE_STATIC_LIB
 =
-ipc
-endif
-ifdef
-MOZ_MATHML
-PARALLEL_DIRS
-+
+1
+EXPORT_LIBRARY
 =
-\
-mathml
-\
-(
-NULL
-)
-endif
-ifdef
-MOZ_SVG
-PARALLEL_DIRS
-+
+1
+EXPORTS_NAMESPACES
 =
-svg
-/
-base
-/
-src
-endif
-PARALLEL_DIRS
-+
-=
-inspector
-/
-public
-inspector
-/
-src
-ifdef
-ENABLE_TESTS
-PARALLEL_DIRS
-+
-=
-inspector
-/
-tests
-endif
-DIRS
-+
-=
-build
-ifdef
-ENABLE_TESTS
-PARALLEL_DIRS
-+
-=
-\
-xul
-/
-test
-\
-xul
-/
-base
-/
-test
-\
-(
-NULL
-)
-TOOL_DIRS
-+
-=
-tools
-/
-reftest
-reftests
-/
-fonts
-reftests
-/
-fonts
-/
-mplus
-DIRS
-+
-=
-tools
-/
-pageloader
-ifdef
-MOZ_DEBUG
-DIRS
-+
-=
-tools
+mozilla
 /
 layout
+EXPORTS_mozilla
+/
+layout
+=
+\
+RenderFrameChild
+.
+h
+\
+RenderFrameParent
+.
+h
+\
+(
+NULL
+)
+CPPSRCS
+=
+\
+RenderFrameChild
+.
+cpp
+\
+RenderFrameParent
+.
+cpp
+\
+(
+NULL
+)
+include
+(
+topsrcdir
+)
+/
+config
+/
+config
+.
+mk
+include
+(
+topsrcdir
+)
+/
+ipc
+/
+chromium
+/
+chromium
 -
-debug
-endif
-endif
+config
+.
+mk
 include
 (
 topsrcdir
@@ -557,3 +501,56 @@ config
 rules
 .
 mk
+LOCAL_INCLUDES
++
+=
+\
+-
+I
+(
+topsrcdir
+)
+/
+content
+/
+base
+/
+src
+\
+-
+I
+(
+topsrcdir
+)
+/
+layout
+/
+base
+\
+-
+I
+(
+topsrcdir
+)
+/
+layout
+/
+generic
+\
+-
+I
+(
+topsrcdir
+)
+/
+layout
+/
+xul
+/
+base
+/
+src
+\
+(
+NULL
+)
