--- a/layout/style/test/Makefile.in
+++ b/layout/style/test/Makefile.in
@@ -923,6 +923,14 @@ test_garbage_at_end_of_declarations
 .
 html
 \
+test_hover
+.
+html
+\
+hover_helper
+.
+html
+\
 test_ident_escaping
 .
 html
@@ -952,10 +960,6 @@ test_media_queries_dynamic
 html
 \
 test_media_queries_dynamic_xbl
-.
-html
-\
-test_moz_device_pixel_ratio
 .
 html
 \
