--- a/ipc/glue/Makefile.in
+++ b/ipc/glue/Makefile.in
@@ -514,6 +514,64 @@ h
 (
 NULL
 )
+ifeq
+(
+(
+OS_TARGET
+)
+Android
+)
+#
+Android
+has
+its
+own
+#
+almost
+-
+but
+-
+not
+-
+quite
+-
+compatible
+-
+with
+-
+POSIX
+-
+or
+-
+/
+dev
+/
+shm
+shared
+memory
+#
+impl
+.
+EXPORTS_mozilla
+/
+ipc
++
+=
+SharedMemoryBasic_android
+.
+h
+else
+EXPORTS_mozilla
+/
+ipc
++
+=
+SharedMemoryBasic_chromium
+.
+h
+endif
+#
+}
 ENABLE_CXX_EXCEPTIONS
 =
 1
@@ -587,6 +645,14 @@ cpp
 NULL
 )
 else
+#
+This
+generic
+code
+works
+on
+android
+.
 CPPSRCS
 +
 =
@@ -594,6 +660,22 @@ SharedMemory_posix
 .
 cpp
 endif
+ifeq
+(
+(
+OS_TARGET
+)
+Android
+)
+CPPSRCS
++
+=
+SharedMemoryBasic_android
+.
+cpp
+endif
+#
+}
 include
 (
 topsrcdir
