Bug 570625, part 2: Add a SurfaceDescriptorX11 datatype that abstracts what's needed to share an Xlib surface to another process. r=karl sr=shaver
UltraBlame original commit: fdb0145ee11701331295c7e115a8e15b21bb6f8f

--- a/gfx/layers/Makefile.in
+++ b/gfx/layers/Makefile.in
@@ -677,6 +677,27 @@ cpp
 (
 NULL
 )
+ifdef
+MOZ_X11
+#
+{
+EXPORTS_mozilla
+/
+layers
++
+=
+ShadowLayerUtilsX11
+.
+h
+CPPSRCS
++
+=
+ShadowLayerUtilsX11
+.
+cpp
+endif
+#
+}
 endif
 #
 }
@@ -730,6 +751,9 @@ CXXFLAGS
 =
 (
 MOZ_CAIRO_CFLAGS
+)
+(
+TK_CFLAGS
 )
 LayerManagerOGLShaders
 .
