Bug 574688 - replace the status bar with the addon bar (r=mano, a=blocking-beta7)
UltraBlame original commit: bb2db707bfcb36dd0f5d910484f5202564991807

--- a/browser/components/privatebrowsing/test/browser/Makefile.in
+++ b/browser/components/privatebrowsing/test/browser/Makefile.in
@@ -465,10 +465,6 @@ browser_privatebrowsing_crh
 .
 js
 \
-browser_privatebrowsing_downloadmonitor
-.
-js
-\
 browser_privatebrowsing_fastswitch
 .
 js
@@ -602,6 +598,19 @@ sjs
 (
 NULL
 )
+#
+Disabled
+until
+bug
+564934
+is
+fixed
+:
+#
+browser_privatebrowsing_downloadmonitor
+.
+js
+\
 #
 Turn
 off
