Bug 593483 - Unbreak (real) dtrace. r=gal, a=NPOTB
UltraBlame original commit: 1a7b01521bcd56e711e448a3af383b4c23f54f2e

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -5163,6 +5163,8 @@ h
 .
 in
 sed
+-
+e
 '
 s
 /
@@ -5172,6 +5174,26 @@ _DTRACE_VERSION
 ifdef
 INCLUDE_MOZILLA_DTRACE
 /
+'
+\
+-
+e
+'
+/
+const
+/
+!
+s
+/
+char
+\
+*
+/
+const
+char
+*
+/
+g
 '
 \
 javascript
