Bug 584480 - Send Referer header with media requests - r=roc a=blocking2.0
UltraBlame original commit: bd0adbe793f3af185f843951103c0e032b42cf01

--- a/content/media/test/Makefile.in
+++ b/content/media/test/Makefile.in
@@ -745,6 +745,10 @@ redirect
 .
 sjs
 \
+referer
+.
+sjs
+\
 seek1
 .
 js
@@ -1443,6 +1447,10 @@ test_audio_event_adopt
 html
 \
 test_framebuffer
+.
+html
+\
+test_referer
 .
 html
 \
