Bug 5976246 - pymake bustage in js/src because we have things.cc depend on jsautokw.h, and that does interesting things to $< with pymake. r+a=bustage-fix
UltraBlame original commit: 150d64f4e03e1d0246f49db7dee2b926dbc13af1

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -5091,6 +5091,16 @@ may
 use
 them
 (
+patsubst
+%
+.
+cc
+%
+.
+(
+OBJ_SUFFIX
+)
+(
 CPPSRCS
 :
 %
@@ -5101,6 +5111,7 @@ cpp
 .
 (
 OBJ_SUFFIX
+)
 )
 )
 :
