Bug 588342 - console should restore focus to proper place when closed, r+a=dietrich
UltraBlame original commit: 3c500e3e7dd3cead70a9e3ecf24f8ffaf0d5e0e8

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -206,6 +206,17 @@ mozilla
 com
 >
 #
+Mihai
+ucan
+<
+mihai
+.
+sucan
+gmail
+.
+com
+>
+#
 #
 Alternatively
 the
@@ -506,6 +517,10 @@ browser_webconsole_consoleonpage
 js
 \
 browser_webconsole_bug_587617_output_copy
+.
+js
+\
+browser_webconsole_bug_588342_document_focus
 .
 js
 \
