--- a/intl/locale/src/Makefile.in
+++ b/intl/locale/src/Makefile.in
@@ -556,6 +556,36 @@ config
 rules
 .
 mk
+ifdef
+MOZ_ENABLE_MEEGOTOUCH
+#
+Meegotouch
+does
+not
+make
+sense
+without
+Qt
+#
+so
+there
+'
+s
+no
+need
+to
+check
+MOZ_WIDGET_TOOLKIT
+CXXFLAGS
++
+=
+(
+MOZ_QT_CFLAGS
+)
+(
+MOZ_MEEGOTOUCH_CFLAGS
+)
+endif
 libs
 :
 :
