Add support for CL_INCLUDES_PREFIX environment variable for handling localized cl.exe /showIncludes output.  (Bug 587372)  r=ted  a2.0=blocking2.0:final
UltraBlame original commit: fa73c53624741ffc9921702c53aadcb7e50373d0

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -1881,6 +1881,10 @@ STATIC_LIBIDL
 MOZ_NATIVE_MAKEDEPEND
 =
 SYSTEM_MAKEDEPEND
+export
+CL_INCLUDES_PREFIX
+=
+CL_INCLUDES_PREFIX
 MOZ_AUTO_DEPS
 =
 MOZ_AUTO_DEPS
