--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -1160,6 +1160,10 @@ TK_CFLAGS
 MOZ_NATIVE_MAKEDEPEND
 =
 SYSTEM_MAKEDEPEND
+export
+CL_INCLUDES_PREFIX
+=
+CL_INCLUDES_PREFIX
 MOZ_AUTO_DEPS
 =
 MOZ_AUTO_DEPS
