--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -41270,6 +41270,121 @@ D_JS_CONFDEFS_H_
 DMOZILLA_CLIENT
 '
 else
+echo
+'
+#
+include
+<
+stdio
+.
+h
+>
+'
+>
+dummy
+-
+hello
+.
+c
+changequote
+(
+)
+CL_INCLUDES_PREFIX
+=
+"
+{
+CC
+}
+"
+-
+showIncludes
+-
+c
+-
+Fonul
+dummy
+-
+hello
+.
+c
+2
+>
+&
+1
+|
+sed
+-
+ne
+'
+s
+/
+^
+\
+(
+[
+^
+:
+]
+*
+:
+[
+^
+:
+]
+*
+:
+\
+)
+.
+*
+stdio
+.
+h
+/
+\
+1
+/
+p
+'
+changequote
+(
+[
+]
+)
+if
+test
+-
+z
+"
+CL_INCLUDES_PREFIX
+"
+;
+then
+AC_MSG_ERROR
+(
+[
+Cannot
+find
+cl
+-
+showIncludes
+prefix
+.
+]
+)
+fi
+AC_SUBST
+(
+CL_INCLUDES_PREFIX
+)
+rm
+-
+f
+dummy
+-
+hello
+.
+c
 _topsrcdirwin
 =
 cd
