Bug 571289 - Don't use nsScriptSecurityManager off the main thread. r=mrbkap, a2.0=blocking
UltraBlame original commit: 46310d87f84899a06d63cb8b66b196ecb256eab3

--- a/caps/tests/browser/Makefile.in
+++ b/caps/tests/browser/Makefile.in
@@ -158,6 +158,7 @@ Original
 Code
 is
 #
+the
 Mozilla
 Foundation
 .
@@ -173,7 +174,7 @@ Copyright
 (
 C
 )
-2008
+2010
 #
 the
 Initial
@@ -191,20 +192,16 @@ s
 )
 :
 #
-Mike
-Shaver
+Justin
+Lebar
 <
-shaver
-mozilla
+justin
+.
+lebar
+gmail
 .
 com
 >
-(
-original
-cutter
-and
-paster
-)
 #
 #
 Alternatively
@@ -404,6 +401,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -413,6 +413,13 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+caps
+/
+tests
+/
+browser
 include
 (
 DEPTH
@@ -423,10 +430,6 @@ config
 autoconf
 .
 mk
-DIRS
-=
-mochitest
-browser
 include
 (
 topsrcdir
@@ -437,3 +440,45 @@ config
 rules
 .
 mk
+_BROWSER_TEST_FILES
+=
+\
+browser_bug571289
+.
+js
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_BROWSER_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
+/
+(
+relativesrcdir
+)
