--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -1066,6 +1066,14 @@ browser_tab_dragdrop
 .
 js
 \
+browser_tab_dragdrop2
+.
+js
+\
+browser_tab_dragdrop2_frame1
+.
+xul
+\
 browser_tabfocus
 .
 js
