Bug 595300: Update NSS to NSS_3_12_8_BETA3.  r=various a=blocking2.0:betaN
UltraBlame original commit: d9a8b06248be17f3d78128b065c0c86c5f43d94f

--- a/security/nss/lib/freebl/Makefile
+++ b/security/nss/lib/freebl/Makefile
@@ -1103,6 +1103,30 @@ DEFINES
 =
 -
 DFREEBL_NO_DEPEND
+LOWHASH_SRCS
+=
+stubs
+.
+c
+nsslowhash
+.
+c
+LOWHASH_EXPORTS
+=
+nsslowhash
+.
+h
+MAPFILE_SOURCE
+=
+freebl_hash
+.
+def
+else
+MAPFILE_SOURCE
+=
+freebl
+.
+def
 endif
 #
 NSS_X86
