Bug 595350 - Fix leaks when closing windows or tabs with the Web Console still open. r=sdwilsh a=blocking-betaN+
UltraBlame original commit: b2cb6f8e484065a937c73f440af54cf1e19dea52

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -512,6 +512,10 @@ browser_webconsole_bug_581231_close_button
 .
 js
 \
+browser_webconsole_bug_595350_multiple_windows_and_tabs
+.
+js
+\
 browser_webconsole_consoleonpage
 .
 js
