Bug 594487 - [SeaMonkey] leak test: "Exception / NS_ERROR_XPC_GS_RETURNED_FAILURE / nsIJSCID.getService / messageWakeupService.js :: anonymous :: line 56". r=mfinkle, a=NPOTB
UltraBlame original commit: 1d2729c14e468d2fef04bb49f46d397585a80ad8

--- a/content/base/src/Makefile.in
+++ b/content/base/src/Makefile.in
@@ -871,6 +871,15 @@ contentAreaDropListener
 .
 manifest
 \
+(
+NULL
+)
+ifdef
+MOZ_IPC
+EXTRA_COMPONENTS
++
+=
+\
 messageWakeupService
 .
 js
@@ -882,6 +891,7 @@ manifest
 (
 NULL
 )
+endif
 EXTRA_JS_MODULES
 =
 \
