Bug 593387 - "Get Add-ons" pane is being restricted by X-FRAME-OPTIONS. r=bz a=b
UltraBlame original commit: f5c0015afe0e4f941c72515353f7cce000d4cc8a

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -2139,6 +2139,16 @@ frame
 .
 sjs
 \
+_BROWSER_TEST_FILES
+=
+\
+browser_bug593387
+.
+js
+\
+(
+NULL
+)
 libs
 :
 :
@@ -2199,6 +2209,38 @@ testing
 mochitest
 /
 tests
+/
+(
+relativesrcdir
+)
+libs
+:
+:
+(
+_BROWSER_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
 /
 (
 relativesrcdir
